# localports

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
Formula/: localports.rb
src/: known_process.rs  main.rs  port_scanner.rs  process_info.rs
